# tLBM

./: .gitignore  CMakeLists.txt  README.md
include/: D3Q15LatticeStructure.h  D3Q15LatticeStructure.hpp  D3Q19LatticeStructure.h  D3Q19LatticeStructure.hpp  D3Q27LatticeStructure.hpp  HaloDataObject.hpp  HaloDataOrganizer.hpp  LatticeStructure.h  LatticeStructure.hpp  Problem.h  TLBM_Partition.h  TLBM_cudaPartition.h  TLBM_definitions.h
python/: FluidChannel.py  gen_gold_standard.py  hdf5Helper.py  partition_compare.py  partition_suggestion.py  processTLBM.py  pyPartition.py  tLBM_create_restart.py  tLBM_write_params.py  validate.py
scripts/: psph_geom.py  runPSPH.pbs  runWMB.pbs  run_test.sh  test_pSpheriod.sh  wmb_geom.py
src/: D3Q15LatticeStructure.cpp  D3Q19LatticeStructure.cpp  LatticeStructure.cpp  Problem.cpp  TLBM_Partition.cpp  partition_compare.py  partition_suggestion.py  pyPartition.py  tLBM.cpp  tLBM_partition.py
tests/FluidChannelTest/: make_empty_channel.py
tests/PartitionerTest/: test_1D_metis.sh  test_1D_partition.sh  test_1D_partition_small.sh  test_3D_partition.sh  test_geom.py  test_geom_small.py  test_metis_partition.sh
tests/TestParamRead/: make_empty_channel.py  make_empty_channel_2.py  make_input_files.sh  test_param_read.sh  test_param_read_2.sh
tests/tLBM_test/: hdf5Helper.py  make_wmb.py  processTLBM.py  run_test.sh  tLBM_write_params.py  tLBMexec  vtkHelper.py  wall_mounted_brick.mat  wmb_geom.py
